Set summary for all of Models and Remove unused namespace

--- a/src/BackeryShop/BackeryShop.csproj
+++ b/src/BackeryShop/BackeryShop.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Item.cs" />
+    <Compile Include="ModelData\ProductDT.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderItem.cs" />
