--- a/src/BackeryShop/BackeryShop.csproj
+++ b/src/BackeryShop/BackeryShop.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IOrderItemService.cs" />
     <Compile Include="Interfaces\IOrderService.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ModelData\ProductDT.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="Models\StaticProduct.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\OrderItemService.cs" />
     <Compile Include="Services\OrderService.cs" />
   </ItemGroup>
   <ItemGroup>
