Change PacksData and ResultData to ResultProductPackData and ResultProductData to Set Final Result to unit test

--- a/src/BackeryShop/BackeryShop.csproj
+++ b/src/BackeryShop/BackeryShop.csproj
@@ -49,8 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataModel\PacksData.cs" />
-    <Compile Include="DataModel\ResultData.cs" />
+    <Compile Include="DataModel\ResultProductPackData.cs" />
+    <Compile Include="DataModel\ResultProductData.cs" />
     <Compile Include="Interfaces\IOrderItemService.cs" />
     <Compile Include="Interfaces\IOrderService.cs" />
     <Compile Include="Item.cs" />
